# conductor

./: .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  Cargo.toml  LICENSE.txt  NOTICE.txt  README.md  README.zh-CN.md  deep-research-report.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.desktop.json  tsconfig.electron.json  tsconfig.json  tsconfig.scripts.json  tsconfig.test.json  vite.config.js  vite.config.ts
.codex/: README.md  config.toml
.github/: README.md  README2.md  conductor-instructions.md  dependabot.yaml  labeler.yml  labels.yml  migration-rules.md  pull_request_template.md  release.yml
.tmp/: icon-render.html  icon-server.mjs
cli/: Cargo.toml  README.md
cli/resources/: recipes.v1.json  templateRules.v1.json
cli/src/: analysis.rs  assessment.rs  cells.rs  converter.rs  dataset.rs  detect.rs  import.rs  infer.rs  legend.rs  main.rs  rc.rs  rules.rs  structured_content.rs  table_facts.rs  table_model_seed.rs  utils.rs
conductor-py/: ORIGIN_WORKERS.md  run_origin_csv.py  test_origin_capabilities.py
conductor-rs/: Cargo.toml  README.md
conductor-rs/worker/: Cargo.toml
conductor-rs/worker/src/: analysis.rs  dataset.rs  detect.rs  import.rs  infer.rs  legend.rs  main.rs  rc.rs  rules.rs  utils.rs
desktop/: analysis-store.ts  boot-splash.ts  bootSplashWindow.ts  device-analysis-store.ts  ipc-channels.ts  main.ts  origin-plot-options.ts  origin-runner.ts  preload-app.ts  preload-boot.ts  preload-conductor.ts  preload-import.ts  preload-origin.ts  preload.ts  tsconfig.json  (+3 more)
(+2986 files in other folders)
