[package]
name = "conductor-cli"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "conductor-rs"
path = "src/main.rs"

[dependencies]
calamine = "0.31"
csv = "1.3"
encoding_rs = "0.8"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
