[package]
name = "worker"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "rs-worker"
path = "src/main.rs"

[dependencies]
assessment = { path = "../assessment" }
calamine = "0.31"
csv = "1.3"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
